// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests IconButton DefaultM 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-icon-button"
    data-active={false}
    data-size="M"
    data-variant="Default"
    title="close"
  >
    <pixiv-icon
      name="24/Close"
    />
  </button>
</div>
`;

exports[`Storybook Tests IconButton IsActive 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-icon-button"
    data-active={true}
    data-size="M"
    data-variant="Default"
    title="close"
  >
    <pixiv-icon
      name="24/Close"
    />
  </button>
</div>
`;

exports[`Storybook Tests IconButton OverlayM 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-icon-button"
    data-active={false}
    data-size="M"
    data-variant="Overlay"
    title="close"
  >
    <pixiv-icon
      name="24/Close"
    />
  </button>
</div>
`;
